fix: change the way to show data & style z-index for header component

--- a/practices/practice-two/src/assets/stylesheets/layout/_header.scss
+++ b/practices/practice-two/src/assets/stylesheets/layout/_header.scss
@@ -9,6 +9,7 @@
     @extend %item-center;
     @extend %relative;
     @extend %margin-center;
+    @extend %z-index-1;
   }
 
   &-left,
